# MAI_CG_lab

./: README.md
Lab1/: CMakeLists.txt  Game.cpp  Game.h  Main.cpp  Window.cpp  Window.h
Lab2/: CMakeLists.txt
Lab2/glad/include/glad/: glad.h
Lab2/include/: GUI.h  Game.h  Graphics.h  Matrix.h  Shader.h  SharedContext.h  Window.h
Lab2/shaders/: MainVertexShader.vert  TextFragmentShader.frag
Lab2/src/: GUI.cpp  Game.cpp  Graphics.cpp  Shader.cpp  Window.cpp
Lab3/: CMakeLists.txt
Lab3/glad/src/: glad.c
Lab3/include/: Camera.h  Game.h  Graphics.h  Matrix.h  Vector.h
Lab3/src/: Camera.cpp  GUI.cpp  Game.cpp
Lab4/: CMakeLists.txt
Lab4/include/: Game.h  Graphics.h  SceneManager.h  SharedContext.h  Window.h
Lab4/shaders/: LightSource.vert  Main.frag  Main.vert
Lab4/src/: Camera.cpp  GUI.cpp  Game.cpp  Graphics.cpp  SceneManager.cpp  Window.cpp
Lab5/: CMakeLists.txt
Lab5/include/: Camera.h  GUI.h  Game.h  Graphics.h  Matrix.h  SceneManager.h  Shader.h
Lab5/shaders/: GUI.frag  LightSource.frag  Main.frag  Main.vert  Text.vert  VolumetricLight.frag
Lab5/src/: Game.cpp  Graphics.cpp  Main.cpp  SceneManager.cpp  Shader.cpp
